# kolosal-cli

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  docker-build.sh  docker-compose.yml  go.mod  go.sum  main.go  package-lock.json  package.json
cmake/: ucm.cmake
internal/api/: hf.go
internal/common/: http.go
internal/gguf/: filetype.go  parse.go  reader.go
internal/ui/: commands.go  downloads.go  file_list.go  http_helpers.go  keys.go  messages.go  model_list.go  progress.go  quant.go  settings.go  text_utils.go  usage.go
scripts/: clean.js  generate-git-commit-info.js  version.js
